--- a/src/pages/dev/test-site/main-page/+Page.mdx
+++ b/src/pages/dev/test-site/main-page/+Page.mdx
@@ -55,29 +55,34 @@ import { MacrostratIcon } from "~/components";
   <h1>Locations</h1>
 </div>
 <div class="card location-card">
-  <Image className="card-image top" src="north_america_med.jpg"></Image>
-  <div class="location-text">
-    <h1>North America</h1>
-    <p>243 packages. 798 units. 897 collections.</p>
+  <div class="location">
+    <Image className="card-image top" src="north_america_med.jpg"></Image>
+    <div class="location-text">
+      <h1>North America</h1>
+      <p>243 packages. 798 units. 897 collections.</p>
+    </div>
   </div>
-
-  <div class="location-text">
-    <h1>Carribean</h1>
-    <p>243 packages. 798 units. 897 collections.</p>
+  <div class="location">
+    <div class="location-text">
+      <h1>Carribean</h1>
+      <p>243 packages. 798 units. 897 collections.</p>
+    </div>
+    <Image className="card-image" src="caribbean_new_medium.jpg"></Image>
   </div>
-  <Image className="card-image" src="caribbean_new_medium.jpg"></Image>
-
-  <Image className="card-image" src="new_zealand_new_medium.jpg"></Image>
-  <div class="location-text">
-    <h1>New Zealand</h1>
-    <p>828 packages. 2,168 units. 328 collections.</p>
+  <div class="location">
+    <Image className="card-image" src="new_zealand_new_medium.jpg"></Image>
+    <div class="location-text">
+      <h1>New Zealand</h1>
+      <p>828 packages. 2,168 units. 328 collections.</p>
+    </div>
   </div>
-
-  <div class="location-text">
-    <h1>Deep Sea</h1>
-    <p>388 packages. 7,124 units. 0 collections.</p>
+  <div class="location">
+    <div class="location-text">
+      <h1>Deep Sea</h1>
+      <p>388 packages. 7,124 units. 0 collections.</p>
+    </div>
+    <Image className="card-image bottom" src="deep_sea_new_medium.jpg"></Image>
   </div>
-  <Image className="card-image bottom" src="deep_sea_new_medium.jpg"></Image>
 </div>
 
 [//]: # "Map Interface"
